--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -42,6 +42,7 @@
                 android:src="@drawable/saved_places" />
 
             <ImageView
+                android:id="@+id/food"
                 android:layout_width="match_parent"
                 android:layout_height="184dp"
                 android:layout_marginBottom="8dp"
