--- a/app/src/main/res/layout/content_place_detailes.xml
+++ b/app/src/main/res/layout/content_place_detailes.xml
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/globe_24" />
+            app:srcCompat="@drawable/website" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
