--- a/app/src/main/res/layout/content_place_detailes.xml
+++ b/app/src/main/res/layout/content_place_detailes.xml
@@ -65,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
             app:srcCompat="@drawable/location" />
 
         <ImageView
@@ -72,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
             app:srcCompat="@drawable/phone" />
 
         <ImageView
@@ -79,6 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
             app:srcCompat="@drawable/website" />
     </LinearLayout>
 
